# duchess

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile.appimage  LICENSE  PGN_IMPORT.md  README.md  alembic.ini  duchess.spec  install_desktop.sh  requirements.txt  run_duchess.sh  run_test.py  runpod_resume.sh  setup_ubuntu.sh  test_engine_run.py  test_mouse_press.py
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  release.yml
assets/: duchess_icon.icns
data/: BOOK_CREDITS.md
duchess/: attacks.py  board.py  chess_types.py  commands.py  database.py  email_handler.py  engine.py  engine_wrapper.py  lichess.py  lichess_api.py  logging_config.py  main.py  main_email.py  models.py  pgn_importer.py  processor.py
duchess/gui/: accordion.py  board_widget.py  control_panel.py  database_window.py  engine_manager.py  eval_bar.py  main_window.py  opening_explorer.py  worker.py
engine/: CMakeLists.txt
engine/include/: bitboard.hpp  board.hpp  eval.hpp  nnue.h  perft.h  polyglot.h  search.hpp  tt.h  zobrist.h
engine/src/: bindings.cpp  bitboard.cpp  board.cpp  eval.cpp  main.cpp  nnue.cpp  perft.cpp  polyglot.cpp  search.cpp  tt.cpp  uci.cpp  uci.h  zobrist.cpp
engine/tests/: test_api.py  test_bindings.py  test_bitboard.cpp  test_board.cpp  test_eval.cpp  test_movegen.cpp  test_nnue.cpp  test_polyglot.cpp  test_search.cpp  test_syzygy.cpp  test_tt.cpp
migrations/: env.py
migrations/versions/: 2430932bdfaf_add_training_use_to_mastergame.py  53c9846f6043_add_training_use_column_to_master_games.py  5e4e147bdc96_add_master_games_table.py  ae089b8c1674_initial_schema.py
nnue/: README.md  dataset.jsonl  dataset.py  dataset_iter_1.jsonl  dataset_iter_2.jsonl  dataset_iter_3.jsonl  dataset_iter_4.jsonl  dataset_iter_5.jsonl  dataset_iter_6.jsonl  distill.py  distill_dataset.jsonl  duchess_iter_1.pt  duchess_iter_2.pt  duchess_iter_3.pt  duchess_iter_4.pt  duchess_iter_5.pt  duchess_nnue.pt  export.py  gauntlet.py  match.py  match_results.json  model.py  rl_hybrid.py  rl_loop.py  selfplay.py  test_data.jsonl  train.py  training_log.json
packaging/: build_appimage.sh  build_appimage_docker.sh  build_mac_app.sh  duchess.desktop  duchess.spec  duchess_windows.spec
tests/: conftest.py  test_attacks.py  test_board.py  test_database.py  test_drag.py  test_drag_board.py  test_drag_coords.py  test_drag_flow.py  test_drag_push.py  test_drag_qtest.py  test_email.py  test_engine.py  test_engine_io.py  test_engine_singleton.py  test_gui_analysis.py  test_gui_board.py  test_gui_board_interactive.py  test_gui_crashes.py  test_gui_database_window.py  test_gui_heatmap.py  test_gui_main_window.py  test_opening_explorer.py  test_pgn_importer.py  test_processor.py  test_rl_loop.py  test_signal_loop.py  test_ui_sim.py  test_ui_sim_drag.py
whatsapp/: README.md  bot.py  render.py  wa_processor.py
